# temperate

./: .gitignore  README.md  pyproject.toml
examples/: home-wiser.cfg  home.nt
src/temperate/: cli.py
tests/: test_utils.py  test_wiser.py
tests/inputs/: 001-basic.nt
tests/outputs/: 001-basic-wiser.json
